# trxo

./: .flake8  .gitignore  .secrets.baseline  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  alpha_journeys_v1_20260311_115200.json  index.html  journeys_v1_20260410_162633.json  journeys_v1_20260504_163254.json  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap.xml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  test.yml
advanced_features/: index.html
batch_operations/: index.html
docs/: advanced_features.md  batch_operations.md  contact.md  home.md  index.md  installation.md  service-account-token-lifetime-and-scopes.md  setup_and_auth.md  storage_setup.md  usage.md
docs/javascripts/: email-validation.js
docs/stylesheets/: extra.css
home/: index.html
installation/: index.html
javascripts/: gateway.js
search/: search_index.json
service-account-token-lifetime-and-scopes/: index.html
setup_and_auth/: index.html
src/trxo/: constants.py  main.py
src/trxo/auth/: on_premise.py  service_account.py  token_manager.py
src/trxo/commands/: logs.py  project.py
src/trxo/config/: api_headers.py
src/trxo/logging/: __init__.py  config.py  formatters.py  logger.py  utils.py
src/trxo/utils/: config_store.py  console.py  deletion_manager.py  diff_presenter.py  error_presenter.py  git_manager.py  hash_manager.py  rollback_manager.py  rollback_presenter.py  url.py
src/trxo_lib/: __init__.py
src/trxo_lib/auth/: handler.py  on_premise.py  service_account.py  token_manager.py
src/trxo_lib/batch/: batch_export.py  batch_import.py
src/trxo_lib/config/: __init__.py  api_headers.py  config_manager.py  config_store.py  store.py  validation.py
src/trxo_lib/core/: auth_manager.py  base_command.py
src/trxo_lib/exceptions/: core.py
src/trxo_lib/exports/: processor.py  service.py
src/trxo_lib/git/: __init__.py  branches.py  common.py  credentials.py  manager.py  operations.py  repository.py
src/trxo_lib/imports/: processor.py  service.py
src/trxo_lib/logging/: __init__.py  config.py  formatters.py  logger.py  utils.py
src/trxo_lib/operations/: __init__.py  auth_manager.py  base_command.py
src/trxo_lib/state/: delete.py  hash.py  rollback.py
src/trxo_lib/utils/: config_store.py  deletion_manager.py  hash_manager.py  rollback_manager.py  url.py
storage_setup/: index.html
stylesheets/: extra.css
tests/: README.md  __init__.py  conftest.py  main.py
tests/auth/: __init__.py  test_on_premise.py  test_service_account.py  test_token_manager.py
tests/commands/: __init__.py  test_logs.py  test_project.py
tests/commands/batch/: test_batch_export.py  test_batch_import.py  test_config_generator.py  test_manager.py
tests/commands/config/: test_auth_handler.py  test_config_manager.py  test_settings.py  test_status.py  test_validation.py
tests/commands/export/: test_agents.py  test_applications.py  test_authn.py  test_base_exporter.py  test_connectors.py  test_email_templates.py  test_endpoints.py  test_esv.py  test_journeys.py  test_managed.py  test_manager.py  test_mappings.py  test_oauth.py  test_policies.py  test_privileges.py  test_realms.py  test_saml.py  test_scripts.py  test_services.py  test_themes.py  test_webhooks.py
tests/commands/imports/: __init__.py  test_agents.py  test_applications.py  test_authn.py  test_base_exporter.py  test_base_importer.py  test_connectors.py  (+16 more)
tests/logging/: __init__.py  test_config.py  test_formatters.py  test_logger.py  test_utils.py
tests/trxo/: test_main.py
tests/utils/: __init__.py  test_config_store.py  test_console.py  test_deletion_manager.py  test_hash_manager.py  test_rollback_manager.py  test_url.py
usage/: index.html
(+360 files in other folders)
