[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trxo"
version = "1.0.0"
description = "PingOne Advanced Identity Cloud Configuration Management Tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Trevonix", email = "trxo-support@trevonix.com"}
]
requires-python = ">=3.10"
keywords = ["PingOne", "Advanced", "Identity", "Cloud", "identity", "configuration", "management", "cli", "trxo", "orchestrator"]
classifiers = [
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "httpx>=0.23.0",
    "pyjwt==2.12.0",
    "jwcrypto==1.5.6",
    "tqdm==4.67.1",
    "py-file-versioning>=0.10.0",
    "keyring>=25.6.0",
    "deepdiff>=6.0.0",
    "GitPython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=5.0.0",

    "black>=24.0.0",
    "flake8>=7.0.0",
    "isort>=5.13.0",

    "bandit>=1.7.8",
    "safety>=3.0.0",
    "detect-secrets>=1.5.0",

    "codecov>=2.1.13",
]


[project.urls]
Homepage = "https://github.com/Trevonix/trxo"
Repository = "https://github.com/Trevonix/trxo.git"
Documentation = "https://github.com/Trevonix/trxo/docs"

[project.scripts]
trxo = "trxo.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["trxo*"]

[tool.setuptools.package-data]
trxo = ["py.typed"]

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.coverage.run]
omit = [
  "*/tests/*",
]

